--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cna-chakra-ui-template",
+  "name": "next-with-chakraUI-other-template",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,9 +12,7 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@fontsource/poppins": "^4.5.0",
     "framer-motion": "^5.5.5",
-    "hamburger-react": "^2.4.1",
     "next": "12.0.7",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
